--- a/index.html
+++ b/index.html
@@ -191,9 +191,9 @@
   <footer>
     <p>© 2025 Christian Raphael G. Milanbilin</p>
     <div class="social">
-      <a href="https://www.facebook.com/christian.109743/">f</a>
-      <a href="https://x.com/CMilanbili69465">t</a>
-      <a href="https://www.instagram.com/akomabait_/">in</a>
+      <a href="https://www.facebook.com/christian.109743/">facebook</a>
+      <a href="https://x.com/CMilanbili69465">twitter</a>
+      <a href="https://www.instagram.com/akomabait_/">instagram</a>
     </div>
   </footer>
 </body>
