--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     <div class="logo">Christian Raphael</div>
     <nav>
       <a href="#">Home</a>
-      <a href="#">About</a>
+      <a href="about.html">About</a>
       <a href="#">Projects</a>
       <a href="#">Resume</a>
       <a href="#">Contact</a>
