--- a/about.html
+++ b/about.html
@@ -170,4 +170,13 @@
 
 
 
-  
+   <footer>
+    <p>© 2025 Christian Raphael G. Milanbilin</p>
+    <div class="social">
+      <a href="https://www.facebook.com/christian.109743/">facebook</a>
+      <a href="https://x.com/CMilanbili69465">twitter</a>
+      <a href="https://www.instagram.com/akomabait_/">instagram</a>
+    </div>
+  </footer>
+</body>
+</html>
