--- a/about.html
+++ b/about.html
@@ -149,7 +149,7 @@
   <header>
     <div class="logo">Christian Raphael</div>
     <nav>
-      <a href="#">Home</a>
+      <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="#">Projects</a>
       <a href="#">Resume</a>
@@ -158,15 +158,7 @@
   </header>
 
  
-  <section class="hero">
-    <div class="placeholder"></div>
-    <h1>Hi, I'm Christian Raphael G. Milanbilin</h1>
-    <p>A passionate web developer and aspiring software engineer.</p>
-    <div class="buttons">
-      <button>View My Work</button>
-      <button>Contact Me</button>
-    </div>
-  </section>
+ 
 
 
 
