Update project 1 image source in index.html

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <h2>Featured Projects</h2>
     <div class="project-grid">
       <div class="project">
-        <img src="concert.png" alt="Project 1 image">
+        <img src="https://picsum.photos/200/150?random=1" alt="Project 1 image">
         <p>Project 1</p>
       </div>
       <div class="project">
