Update project image source in index.html

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <h2>Featured Projects</h2>
     <div class="project-grid">
       <div class="project">
-        <img src="https://picsum.photos/200/150?random=1" alt="Project 1 image">
+        <img src="https://www.bing.com/images/search?view=detailV2&ccid=1Fxcqegd&id=A6E24944D7CF79F500DB049C87E710C434A07879&thid=OIP.1FxcqegdpITSMVs0WQaHvgHaE8&mediaurl=https%3a%2f%2fcdn.motocms.com%2fsrc%2f868x580%2f63700%2f63728-original-1200.jpg&exph=580&expw=868&q=pictures+of+website+elementary+school%5c&FORM=IRPRST&ck=95BE82F3BF8310DA8FE5799520ACE87A&selectedIndex=2&itb=0" alt="Project 1 image">
         <p>Project 1</p>
       </div>
       <div class="project">
