Update introduction paragraph in index.html

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
   <section class="hero">
     <div class="placeholder"></div>
     <h1>Hi, I'm Christian Raphael G. Milanbilin</h1>
-    <p>A passionate web developer and aspiring software engineer.</p>
+    <p>a student at UNIDA CHRISTIAN COLLEGE</p>
     <div class="buttons">
       <button>View My Work</button>
       <button>Contact Me</button>
