--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@
   <header>
     <div class="logo">Christian Raphael</div>
     <nav>
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Projects</a>
-      <a href="#">Resume</a>
-      <a href="#">Contact</a>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="projects.html">Projects</a>
+      <a href="resume.html">Resume</a>
+      <a href="contac.html">Contact</a>
     </nav>
   </header>
 
