--- a/about.html
+++ b/about.html
@@ -17,24 +17,25 @@
     }
 
    
-    nav {
+     header {
+      width: 100%;
+      border-bottom: 1px solid #000;
       display: flex;
-      justify-content: center;
+      justify-content: space-between;
       align-items: center;
-      background-color: white;
-      padding: 15px 0;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-      position: sticky;
-      top: 0;
-      z-index: 10;
+      padding: 15px 10%;
+      font-weight: bold;
+    }
+
+    header .logo {
+      font-size: 18px;
     }
 
     nav a {
-      margin: 0 25px;
+      margin-left: 25px;
       text-decoration: none;
-      color: #333;
-      font-weight: 600;
-      transition: 0.3s;
+      color: #000;
+      font-weight: normal;
     }
 
     nav a:hover {
