--- a/about.html
+++ b/about.html
@@ -183,14 +183,14 @@
 
   <!-- Navbar -->
   <nav>
-    <a href="#">Home</a>
-    <a href="#">About</a>
-    <a href="#">Projects</a>
-    <a href="#">Resume</a>
-    <a href="#">Contact</a>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="projects.html">Projects</a>
+    <a href="resume.html">Resume</a>
+    <a href="contact.html">Contact</a>
   </nav>
 
-  <!-- About Section -->
+
   <section class="about">
     <div class="profile-pic" style="background-image: url('your-photo.jpg');"></div>
     <div class="about-text">
@@ -198,12 +198,12 @@
       <h3>Christian Raphael G. Milanbilin</h3>
       <p>
         I am a web developer based in the Philippines. I enjoy building web solutions that make
-        people’s lives easier. In my free time, I like to play guitar and experiment in the kitchen.
+        people’s lives easier. In my free time, I like to play volleyball and experiment in the kitchen.
       </p>
     </div>
   </section>
 
-  <!-- Skills Section -->
+  
   <section class="skills">
     <h2>Skills</h2>
     <div class="skill">
@@ -224,7 +224,7 @@
     </div>
   </section>
 
-  <!-- Goals Section -->
+ 
   <section class="goals">
     <h2>Goals</h2>
     <div class="goal-box">
@@ -232,15 +232,7 @@
     </div>
   </section>
 
-  <!-- Contact Section -->
-  <section class="contact">
-    <h2>Contact</h2>
-    <div class="contact-info">
-      📧 Email: <a href="mailto:milanbilinraph@gmail.com">milanbilinraph@gmail.com</a><br>
-      📱 Phone: <strong>09959145773</strong><br>
-      📍 Location: Philippines
-    </div>
-  </section>
+  
 
 </body>
 </html>
