--- a/about.html
+++ b/about.html
@@ -231,6 +231,14 @@
       To become a full-fledged software engineer working on innovative products.
     </div>
   </section>
+   <footer>
+    <p>© 2025 Christian Raphael G. Milanbilin</p>
+    <div class="social">
+      <a href="https://www.facebook.com/christian.109743">facebook</a>
+      <a href="https://x.com/CMilanbili69465">twitter</a>
+      <a href="https://www.instagram.com/akomabait_/">instagram</a>
+    </div>
+  </footer>
 
   
 
