--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
       color: #000;
     }
 
-    /* Navbar */
+   
     nav {
       display: flex;
       justify-content: center;
@@ -34,7 +34,7 @@
       text-decoration: underline;
     }
 
-    /* About Section */
+  
     .about {
       display: flex;
       align-items: center;
@@ -69,7 +69,7 @@
       line-height: 1.6;
     }
 
-    /* Skills Section */
+   
     .skills {
       padding: 40px 20px;
       border-bottom: 1px solid #000;
@@ -112,7 +112,7 @@
     .python { width: 50%; }
     .design { width: 60%; }
 
-    /* Goals Section */
+    
     .goals {
       text-align: center;
       padding: 50px 20px;
@@ -132,7 +132,7 @@
       background-color: #f8f8f8;
     }
 
-    /* Contact Section */
+  
     .contact {
       text-align: center;
       padding: 50px 20px;
@@ -177,11 +177,28 @@
         width: 80%;
       }
     }
+     footer {
+      text-align: center;
+      padding: 20px 0;
+      font-size: 14px;
+      color: #000;
+    }
+
+    .social {
+      margin-top: 10px;
+    }
+
+    .social a {
+      text-decoration: none;
+      color: #000;
+      font-size: 18px;
+      margin: 0 8px;
+    }
   </style>
 </head>
 <body>
 
-  <!-- Navbar -->
+ 
   <nav>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
