--- a/contact.html
+++ b/contact.html
@@ -141,8 +141,87 @@
       font-size: 18px;
       margin: 0 8px;
     }
+ main {
+            display: flex;
+            justify-content: space-between;
+            padding: 40px;
+        }
 
-  </style>
+        .contact-form, .contact-info {
+            width: 45%;
+        }
+
+        h2 {
+            font-size: 32px;
+            margin-bottom: 20px;
+        }
+
+        h3 {
+            font-size: 24px;
+            margin-bottom: 10px;
+        }
+
+        label {
+            display: block;
+            margin-bottom: 5px;
+            font-weight: bold;
+        }
+
+        input[type="text"], input[type="email"], textarea {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 20px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+
+        textarea {
+            resize: vertical;
+            height: 150px;
+        }
+
+        button {
+            background-color: #0077cc;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #005f99;
+        }
+
+        .social-links a {
+            margin-right: 15px;
+            text-decoration: none;
+            color: #333;
+        }
+
+        .social-links a:hover {
+            color: #0077cc;
+        }
+
+        .map-embed {
+            margin-top: 30px;
+            background-color: #e5e5e5;
+            height: 200px;
+            width: 100%;
+            border-radius: 4px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        footer {
+            background-color: #fff;
+            text-align: center;
+            padding: 20px;
+            border-top: 2px solid #ddd;
+        }
+    </style>
+
 </head>
 <body>
   
@@ -156,12 +235,39 @@
       <a href="contact.html">Contact</a>
     </nav>
   </header>
+ <main>
+        <section class="contact-form">
+            <h2>Contact Me</h2>
+            <form action="#" method="POST">
+                <label for="name">Name</label>
+                <input type="text" id="name" name="name" required>
 
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="message">Message</label>
+                <textarea id="message" name="message" required></textarea>
+
+                <button type="submit">Send Message</button>
+            </form>
+        </section>
+        
+        <section class="contact-info">
+            <h3>Direct Contact Info</h3>
+            <p>Email: <a href="mailto:milanbilinraph@gmail.com">milanbilinraph@gmail.com</a></p>
+            <p>Phone: <a href="tel:+09959145773">09959145773</a></p>
+            <div class="social-links">
+                <a href="#">Twitter</a>
+                <a href="#">GitHub</a>
+                <a href="#">LinkedIn</a>
+            </div>
+            <div class="map-embed">
+                <p>Map Embed (optional)</p>
+                <!-- Map embed code goes here -->
+            </div>
+        </section>
+    </main>
  
- 
-
-
-
    <footer>
     <p>© 2025 Christian Raphael G. Milanbilin</p>
     <div class="social">
