--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       <a href="about.html">About</a>
       <a href="projects.html">Projects</a>
       <a href="resume.html">Resume</a>
-      <a href="contac.html">Contact</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
 
