--- a/review.html
+++ b/review.html
@@ -141,8 +141,88 @@
       font-size: 18px;
       margin: 0 8px;
     }
+ main {
+            padding: 40px;
+        }
 
-  </style>
+        .reviews, .submit-review {
+            margin-bottom: 40px;
+        }
+
+        .reviews h2, .submit-review h2 {
+            font-size: 32px;
+            margin-bottom: 20px;
+        }
+
+        .review {
+            background-color: #fff;
+            padding: 15px;
+            border: 1px solid #ccc;
+            margin-bottom: 15px;
+            border-radius: 8px;
+        }
+
+        .review .stars {
+            color: #ffcc00;
+        }
+
+        .review p {
+            font-style: italic;
+        }
+
+        .review .author {
+            font-weight: bold;
+            margin-top: 10px;
+        }
+
+        /* Submit Review Form */
+        .submit-review form {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            border: 1px solid #ccc;
+            width: 60%;
+            margin: 0 auto;
+        }
+
+        .submit-review label {
+            display: block;
+            margin-bottom: 8px;
+            font-weight: bold;
+        }
+
+        .submit-review input[type="text"], 
+        .submit-review textarea, 
+        .submit-review select {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 15px;
+            border-radius: 4px;
+            border: 1px solid #ccc;
+        }
+
+        .submit-review button {
+            background-color: #0077cc;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            width: 100%;
+        }
+
+        .submit-review button:hover {
+            background-color: #005f99;
+        }
+
+        footer {
+            background-color: #fff;
+            text-align: center;
+            padding: 20px;
+            border-top: 2px solid #ddd;
+        }
+    </style>
+  
 </head>
 <body>
   
@@ -151,7 +231,7 @@
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
-      <a href="projects.html">Projects</a>
+      <a href="review.html">review</a>
       <a href="resume.html">Resume</a>
       <a href="contact.html">Contact</a>
     </nav>
