--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
-      <a href="projects.html">Projects</a>
+      <a href="review.html">review</a>
       <a href="resume.html">Resume</a>
       <a href="contact.html">Contact</a>
     </nav>
