--- a/review.html
+++ b/review.html
@@ -231,7 +231,7 @@
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
-      <a href="review.html">review</a>
+      <a href="review.html">Review</a>
       <a href="resume.html">Resume</a>
       <a href="contact.html">Contact</a>
     </nav>
