--- a/about.html
+++ b/about.html
@@ -214,7 +214,7 @@
       <h2>About Me</h2>
       <h3>Christian Raphael G. Milanbilin</h3>
       <p>
-        I am a student in Unida Christian Church. I enjoy building web solutions that make
+        I am a student in Unida Christian College. I enjoy building web solutions that make
         people’s lives easier. In my free time, I like to play volleyball and experiment in the kitchen.
       </p>
     </div>
