--- a/resume.html
+++ b/resume.html
@@ -141,7 +141,70 @@
       font-size: 18px;
       margin: 0 8px;
     }
+.resume-section {
+      padding: 50px 10%;
+    }
 
+    .resume-section h1 {
+      font-size: 28px;
+      font-weight: bold;
+      margin-bottom: 40px;
+    }
+
+    .resume-container {
+      display: flex;
+      align-items: center;
+      gap: 60px;
+    }
+
+   
+    .resume-box {
+      width: 350px;
+      height: 450px;
+      border: 2px solid #000;
+      background: #f3f3f3;
+      position: relative;
+    }
+
+    .resume-box::before,
+    .resume-box::after {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      border: inherit;
+    }
+
+    .resume-box::before {
+      transform: rotate(45deg);
+    }
+
+    .resume-box::after {
+      transform: rotate(-45deg);
+    }
+
+    
+    .download-container {
+      margin-top: 40px;
+    }
+
+    .download-container h2 {
+      font-size: 20px;
+      margin-bottom: 10px;
+    }
+
+    .download-btn {
+      padding: 12px 25px;
+      border: 1px solid #000;
+      background: #fff;
+      cursor: pointer;
+      font-size: 16px;
+      font-weight: bold;
+    }
+
+    .download-btn:hover {
+      background: #eaeaea;
+    }
   </style>
 </head>
 <body>
@@ -156,11 +219,20 @@
       <a href="contact.html">Contact</a>
     </nav>
   </header>
+<section class="resume-section">
+    <h1>Resume</h1>
 
+    <div class="resume-container">
+      <div class="resume-box"></div>
+
+      <div class="download-container">
+        <h2>Download Resume</h2>
+        <button class="download-btn">Download PDF</button>
+      </div>
+    </div>
+  </section>
  
  
-
-
 
    <footer>
     <p>© 2025 Christian Raphael G. Milanbilin</p>
