--- a/resume.html
+++ b/resume.html
@@ -146,51 +146,32 @@
     }
 
     .resume-section h1 {
-      font-size: 28px;
-      font-weight: bold;
+      font-size: 32px;
       margin-bottom: 40px;
+      font-weight: bold;
     }
 
-    .resume-container {
-      display: flex;
-      align-items: center;
-      gap: 60px;
-    }
-
-   
     .resume-box {
-      width: 350px;
-      height: 450px;
-      border: 2px solid #000;
-      background: #f3f3f3;
-      position: relative;
+      width: 380px;
+      border: 1px solid #000;
+      padding: 5px;
+      background: #f8f8f8;
     }
 
-    .resume-box::before,
-    .resume-box::after {
-      content: "";
-      position: absolute;
+    .resume-box img {
       width: 100%;
-      height: 100%;
-      border: inherit;
+      display: block;
+      border: 1px solid #ccc;
     }
 
-    .resume-box::before {
-      transform: rotate(45deg);
+    .download-area {
+      margin-top: 30px;
     }
 
-    .resume-box::after {
-      transform: rotate(-45deg);
-    }
-
-    
-    .download-container {
-      margin-top: 40px;
-    }
-
-    .download-container h2 {
-      font-size: 20px;
+    .download-title {
+      font-size: 22px;
       margin-bottom: 10px;
+      font-weight: bold;
     }
 
     .download-btn {
@@ -200,6 +181,7 @@
       cursor: pointer;
       font-size: 16px;
       font-weight: bold;
+      transition: 0.2s ease;
     }
 
     .download-btn:hover {
@@ -231,7 +213,25 @@
       </div>
     </div>
   </section>
- 
+ <section class="resume-section">
+    <h1>Resume</h1>
+
+    <!-- Resume Preview Image -->
+    <div class="resume-box">
+      <!-- Replace "resume-preview.jpg" with your real image filename -->
+      <img src="resume-preview.jpg" alt="Resume Preview">
+    </div>
+
+    <!-- Download Button -->
+    <div class="download-area">
+      <div class="download-title">Download Resume</div>
+
+      <!-- Replace "christian-resume.pdf" with your actual PDF file -->
+      <a href="christian-resume.pdf" download>
+        <button class="download-btn">Download PDF</button>
+      </a>
+    </div>
+  </section>
  
 
    <footer>
